Fix naming of 'sparseIncompatibleFields' in QueryPlannerIXSelect::expandIndexes()

XMLWordPrintableJSON

    • Query Optimization
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The expandIndexes function expands wildcard indexes for fields that are eligible for sparse indexes, since wildcard indexes are sparse. These fields are currently misleadingly named sparseIncompatibleFields - they should be renamed to sparseCompatibleFields for clarity and correctness.

            Assignee:
            Tymoteusz Slepowronski
            Reporter:
            Lynne Wang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: