SERVER-101582 Fix naming of sparseIncompatibleFields in QueryPlannerIXSelect::expandIndexes() (#37576)

GitOrigin-RevId: f2d007bbccd7a3d16947f2a5241268c89877cbaa